Restructure and add fonts

--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
 		<meta name="author" content="Nico Adriany">
 		
 		<link rel="stylesheet" href="./assets/css/main.css">
+		<link rel="stylesheet" href="./assets/fonts/fontawesome/css/all.min.css">
 
 		<script src="./assets/js/main.js"></script>
 
 	</head>
 	<body>
-		
+		<div class="landing-page">
+			<div class="pic"></div>
+			<h1>Nico Adriany</h1>
+			<div class="passion">
+				asd
+			</div>
+			<div class="social">
+				<a href="#">Instagram</a>
+				<a href="#">LinkedIn</a>
+				<a href="#">Xing</a>
+				<a href="#">Github</a>
+			</div>
+		</div>
 	</body>
 </html>
