--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="de">
 	<head>
 		<title>Nico Adriany - Developer</title>
 
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="./assets/css/main.css">
 		<link rel="stylesheet" href="./assets/fonts/fontawesome/css/all.min.css">
 
+		<script src="./assets/js/jquery-3.6.0.min.js"></script>
 		<script src="./assets/js/main.js"></script>
 
 	</head>
@@ -18,14 +19,15 @@
 			<div class="pic"></div>
 			<h1>Nico Adriany</h1>
 			<div class="passion">
-				asd
+				<span id="passion-text"></span>
+				<span class="cursor" id="passion-cursor">|</span>
 			</div>
-			<div class="social">
-				<a href="#">Instagram</a>
-				<a href="#">LinkedIn</a>
-				<a href="#">Xing</a>
-				<a href="#">Github</a>
-			</div>
+			<ul class="social">
+				<li><a href="https://www.linkedin.com/in/nico-adriany-8a304b236/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+				<li><a href="https://www.xing.com/profile/Nico_Adriany/" target="_blank"><i class="fab fa-xing"></i></a></li>
+				<li><a href="https://github.com/nicoadriany" target="_blank"><i class="fab fa-github"></i></a></li>
+				<li><a href="https://www.instagram.com/nicoadriany/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+			</ul>
 		</div>
 	</body>
 </html>
