--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<li><a href="https://www.xing.com/profile/Nico_Adriany/" target="_blank"><i class="fab fa-xing"></i></a></li>
 				<li><a href="https://github.com/nicoadriany" target="_blank"><i class="fab fa-github"></i></a></li>
 				<li><a href="https://www.instagram.com/nicoadriany/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+				<li><a href="mailto:kontakt@nicoadriany.de" target="_blank"><i class="far fa-envelope"></i></a></li>
 			</ul>
 		</div>
 	</body>
