--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div class="landing-page">
 			<div class="pic"></div>
-			<h1>Nico Adriany</h1>
+			<h1>Nico Adriano</h1>
 			<div class="passion">
 				<span id="passion-text"></span>
 				<span class="cursor" id="passion-cursor">|</span>
