--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Nico Adriany - Developer">
 		<meta name="author" content="Nico Adriany">
+
+		<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
 		
 		<link rel="stylesheet" href="./assets/css/main.css">
 		<link rel="stylesheet" href="./assets/fonts/fontawesome/css/all.min.css">
