--- a/index.html
+++ b/index.html
@@ -31,6 +31,62 @@
 				<li><a href="https://www.instagram.com/nicoadriany/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 				<li><a href="mailto:kontakt@nicoadriany.de" target="_blank"><i class="far fa-envelope"></i></a></li>
 			</ul>
+			<div class="scroll-icon">
+				<a href="#legal"><i class="fas fa-chevron-down"></i></a>
+			</div>
+		</div>
+		<div class="subpage" id="legal">
+			<div class="subpage-area title-area">
+				<span>Impressum</span>
+			</div>
+			<div class="subpage-area content-area flex-center">
+				<div class="legal">
+					<h2>Angaben gemäß §5 TMG</h2>
+				<p>
+					Nico Adriany<br />
+					An der Spring 2a<br />
+					50181 Bedburg
+				</p>
+				<h3>Kontakt</h3>
+				<p>
+					Telefon: +49 (0)2272-9089524<br />
+					E-Mail: kontakt (a) nicoadriany.de
+				</p>
+				<h2>Haftungsausschluss</h2>
+				<h3>Haftung für Links</h3>
+				<p>
+					Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. 
+					Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten 
+					Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden 
+					zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt 
+					der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne 
+					konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen 
+					werden wir derartige Links umgehend entfernen.
+				</p>
+				<h3>Urheberrecht</h3>
+				<p>
+					Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. 
+					Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes 
+					bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind 
+					nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber 
+					erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. 
+					Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. 
+					Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.
+				</p>
+				<h3>Datenschutz</h3>
+				<p>
+					Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten 
+					personenbezogene Daten (beispielsweise Name, Anschrift oder eMail-Adressen) erhoben werden, erfolgt dies, soweit möglich, 
+					stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben.<br />
+					Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. 
+					Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.<br />
+					Der Nutzung von im Rahmen der Impressumspflicht veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht 
+					ausdrücklich angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen. 
+					Die Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, 
+					etwa durch Spam-Mails, vor.
+				</p>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
