--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="Nico Adriany - Developer">
 		<meta name="author" content="Nico Adriany">
+		<meta name="publisher" content="Nico Adriany">
+		<meta name="copyright" content="Nico Adriany">
+		<meta name="description" content="Nico Adriany - Web developer & C# Desktop developer">
+		<meta name="keywords" content="Nico, Adriany, Web, developer, C#, .NET, ASP.NET, Portfolio">
+		<meta name="robots" content="index, follow">
 
 		<link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
 		
