update personal data

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					</p>
 					<h3>Kontakt</h3>
 					<p>
-						Telefon: +49 (0)2272-9089524<br />
+						Telefon: +49 (0)172 4161998<br />
 						E-Mail: kontakt (a) nicoadriany.de
 					</p>
 					<h2>Haftungsausschluss</h2>
